Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28746

Distance fields fail to render Titillium font on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.0.0 RC 2
    • GUI: Font handling
    • None
    • Windows 7
    • dde09c429ae8b7ad0df4e4b36b8459d2b85a1219

    Description

      While this particular font (and presumably others) renders fine on Linux when added manually to the application by using addApplicationFont() or QML's FontLoader, it will fail on Windows with a bunch of error messages and the QML Text element will be blank.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes