src/gui/text/qfontengine_win.cpp
@@ -158,9 +158,20 @@ static OUTLINETEXTMETRIC *getOutlineTextMetric(HDC hdc)
    return otm;
 }
 
+bool QFontEngineWin::hasCFFTable() const
+{
+   HDC hdc = shared_dc();
+   SelectObject(hdc, hfont);
+   return GetFontData(hdc, MAKE_TAG('C', 'F', 'F', ' '), 0, 0, 0) != GDI_ERROR;
+}
+
 void QFontEngineWin::getCMap()
 {
    ttf = (bool)(tm.tmPitchAndFamily & TMPF_TRUETYPE);
+
+   // TMPF_TRUETYPE is not set for fonts with CFF tables
+   cffTable = !ttf && hasCFFTable();
+
    HDC hdc = shared_dc();
    SelectObject(hdc, hfont);
    bool symb = false;
@@ -981,7 +992,7 @@ void QFontEngineWin::getUnscaledGlyph(glyph_t glyph, QPainterPath *path, glyph_m
 
 bool QFontEngineWin::getSfntTableData(uint tag, uchar *buffer, uint *length) const
 {
-   if (!ttf) {
+   if (!ttf && !cffTable) {
       return false;
    }
    HDC hdc = shared_dc();
