src/plugins/platforms/windows/qwindowsfontengine.cpp
@@ -155,9 +155,20 @@ static OUTLINETEXTMETRIC *getOutlineTextMetric(HDC hdc)
     return otm;
 }
 
+bool QWindowsFontEngine::hasCFFTable() const
+{
+    HDC hdc = m_fontEngineData->hdc;
+    SelectObject(hdc, hfont);
+    return GetFontData(hdc, MAKE_TAG('C', 'F', 'F', ' '), 0, 0, 0) != GDI_ERROR;
+}
+
 void QWindowsFontEngine::getCMap()
 {
     ttf = (bool)(tm.tmPitchAndFamily & TMPF_TRUETYPE);
+
+    // TMPF_TRUETYPE is not set for fonts with CFF tables
+    cffTable = !ttf && hasCFFTable();
+
     HDC hdc = m_fontEngineData->hdc;
     SelectObject(hdc, hfont);
     bool symb = false;
@@ -1041,7 +1052,7 @@ void QWindowsFontEngine::getUnscaledGlyph(glyph_t glyph, QPainterPath *path, gly
 
 bool QWindowsFontEngine::getSfntTableData(uint tag, uchar *buffer, uint *length) const
 {
-    if (!ttf)
+    if (!ttf && !cffTable)
         return false;
     HDC hdc = m_fontEngineData->hdc;
     SelectObject(hdc, hfont);
